--- a/env.list.sample
+++ b/env.list.sample
@@ -3,8 +3,9 @@
 #
 
 APP_NAME=myapp
-CONTAINER_PORT=3000
+IMAGE_NAME=myapp
 DOCKER_TAG=myapp:latest
+CONTAINER_PORT=3000
 
 AWS_PROFILE=
 AWS_REGION=
